fix(timesheets): uploaded files styling, download files on iOS

--- a/sass/parts/timesheets.scss
+++ b/sass/parts/timesheets.scss
@@ -147,7 +147,8 @@
         margin: 0 auto;
     }
 }
-#files {
+
+.timesheet-files {
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
